# light-translate

./: .gitignore  CMakeLists.txt  README.MD  light_translate.manifest  light_translate.rc  main.cc  main.cpp  resource.h
.github/workflows/: build-and-release.yml
hook_test_app/: CMakeLists.txt  dx11_renderer.cpp  dx11_renderer.h  main.cpp  opengl_renderer.cpp  opengl_renderer.h  renderer_common.h
src/: AppConfig.cpp  AppConfig.h  AppController.cpp  AppController.h  Scheduler.cpp  Scheduler.h  TranslationPipeline.cpp  TranslationPipeline.h
src/capture/: CaptureEngine.cpp  CaptureEngine.h  CaptureEngineFactory.cpp  CaptureEngineFactory.h  DxgiCaptureEngine.cpp  DxgiCaptureEngine.h  ICaptureEngine.h
src/network/: BaseHttpTranslateProvider.cpp  BaseHttpTranslateProvider.h  DeepSeekTranslateProvider.cpp  DeepSeekTranslateProvider.h  GoogleTranslateProvider.cpp  GoogleTranslateProvider.h  ITranslateProvider.h  TextTranslateProvider.cpp  TextTranslateProvider.h  TranslateProvider.h  TranslateProviderFactory.cpp  TranslateProviderFactory.h
src/ocr/: BoxDiffDetector.cpp  BoxDiffDetector.h  FrameDiffDetector.cpp  FrameDiffDetector.h  IOcrEngine.h  OcrEngine.cpp  OcrEngine.h  OcrFactory.cpp  OcrFactory.h  PaddleOcrEngine.cpp  PaddleOcrEngine.h  WindowsOcrEngine.cpp  WindowsOcrEngine.h
src/overlay/: OverlayWindow.cpp
src/paddleocr/api/models/: text_detection.cc  text_detection.h  text_recognition.cc  text_recognition.h
src/paddleocr/api/pipelines/: base.h  ocr.cc  ocr.h
src/paddleocr/base/: base_batch_sampler.cc  base_predictor.cc  base_predictor.h
src/paddleocr/common/: image_batch_sampler.cc  image_batch_sampler.h  parallel.h  processors.cc  processors.h  static_infer.cc  static_infer.h
src/paddleocr/configs/: OCR.yaml
src/paddleocr/modules/text_detection/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/paddleocr/modules/text_recognition/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/paddleocr/pipelines/ocr/: pipeline.cc  pipeline.h  result.cc  result.h
src/paddleocr/utils/: args.cc  pp_option.cc  yaml_config.cc
src/ui/: CaptureHelperWindow.cpp  CaptureHelperWindow.h  ITranslationOutput.h  OverlayWindow.cpp  OverlayWindow.h  RegionResultWindow.cpp  RegionResultWindow.h  RegionSelectWindow.cpp  RegionSelectWindow.h  RoiHelperWindow.cpp  RoiHelperWindow.h  SettingsWindow.cpp  SettingsWindow.h
src/updater/: main.cpp
src/utils/: FrameBufferPool.h  Hash.cpp  Hash.h  ImageEncoder.cpp  ImageEncoder.h  StringUtils.cpp  StringUtils.h  Updater.cpp  Updater.h
